--- a/templates/admin/signin.html
+++ b/templates/admin/signin.html
@@ -4,7 +4,7 @@
     <title>Main Page</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <!--set webpage width and height user can not change-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=2.0, user-scalable=no"/>-->
     <title>Sign in</title>
     <script type="text/javascript" src="{{static_url('libs/js/jquery.min.js')}}"></script>
     <link rel="stylesheet" href="{{static_url('libs/css/bootstrap.min.css')}}">
@@ -59,10 +59,12 @@
                     data: {"userAccount": userAccount,"password":password,"inputCode":inputCode},
                     success: function (data){
                         if(data.error_code==0){
-                            window.location.href = "/download"
+                            window.location.href = "/tableTest"
                         }
                         else{
-                            alert(data.msg);
+                            <!--alert(data.msg);-->
+                            $("#msgSignin").html(data.msg).css("color","red");
+                            <!--window.location.href = "/"-->
                         }
                     }
                 })
@@ -75,17 +77,16 @@
             var pwd = $("#password").val()
             $("#msgSignin").html("账号或密码不正确").css("color","red");
             if(userRe.test(user)){
-                $("#userCheck").html("✔").css("color","green");
+                <!--$("#userCheck").html("✔").css("color","green");-->
                 if(pwdRe.test(pwd)){
-                    $("#passowrdCheck").html("✔").css("color","green");
-                    $("#msgSignin").html("账号或密码不正确").css("color","green");
+                    <!--$("#passowrdCheck").html("✔").css("color","green");-->
                     return 0;
                 }else{
-                    $("#passowrdCheck").html("密码错误,6~20位数字字母下划线的组合").css("color","red");
+                    $("#passowrdCheck").html("密码格式不正确,6~20位数字字母下划线的组合").css("color","red");
                     return 1;
                 }
             }else{
-                $("#userCheck").html("账号错误,4~15位以字母开头的数字字母下划线的组合").css("color","red");
+                $("#userCheck").html("账号格式不正确,4~15位以字母开头的数字字母下划线的组合").css("color","red");
                 return 1;
             }
             return 1;
