--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,28 @@
             </a>
         </li>
     </ul>
-    </header>
+</header>
+<div class="container-fluid">
+    <div class="row-fluid">
+        <!-- left menu starts -->
+        <div class="span2 main-menu-span" >
+            <div class="well nav-collapse sidebar-nav" style="border:solid 1px red;">
+                <ul class="nav nav-tabs nav-stacked main-menu menu-style">
+                    <li class="nav-header hidden-tablet">Main</li>
+                    <li><a class="ajax-link" href="#"><i class="icon-home"></i><span class="hidden-tablet"> Dashboard</span></a></li>
+                    <li><a class="ajax-link" href="#"><i class="icon-edit"></i><span class="hidden-tablet"> Publish</span></a></li>
+                    <li><a class="ajax-link" href="#"><i class="icon-list-alt"></i><span class="hidden-tablet"> Post List</span></a></li>
+                    <li><a class="ajax-link" href="#"><i class="icon-list"></i><span class="hidden-tablet"> Category</span></a></li>
+                    <li><a class="ajax-link" href="#"><i class="icon-th-list"></i><span class="hidden-tablet"> Page</span></a></li>
+                    <li class="nav-header hidden-tablet">Setting</li>
+                    <li><a class="ajax-link" href="#"><i class="icon-user"></i><span class="hidden-tablet"> Profile</span></a></li>
+                    <li><a class="ajax-link" href="#"><i class="icon-wrench"></i><span class="hidden-tablet"> Setting</span></a></li>
+                </ul>
+            </div><!--/.well -->
+        </div><!--/span-->
+        <!-- left menu ends -->
+    </div>
+</div>
 
 </body>
 </html>
