--- a/templates/admin/signin.html
+++ b/templates/admin/signin.html
@@ -59,7 +59,8 @@
                     data: {"userAccount": userAccount,"password":password,"inputCode":inputCode},
                     success: function (data){
                         if(data.error_code==0){
-                            window.location.href = "/tableTest"
+                            // window.location.href = "/tableTest"
+                            window.location.href = "/home"
                         }
                         else{
                             <!--alert(data.msg);-->
