--- a/templates/admin/usersetting.html
+++ b/templates/admin/usersetting.html
@@ -28,16 +28,16 @@
 			{% autoescape None %}
 			<fieldset>
 				<div class="control-group">
-					<label for="blogname" class="control-label" style="color: black;">博客名称</label>
+					<label for="currentname" class="control-label">当前用户</label>
 					<div class="controls">
-						<input type="text" value="{{ setting['blogname']}}" id="blogname" name="blogname" class="input-large">
+						<input type="text" value="{{ setting['currentname']}}" id="currentname" name="currentname" class="input-large">
 					</div> <!-- /controls -->
 				</div> <!-- /control-group -->
 				
 				<div class="control-group">
-					<label for="blogdescription" class="control-label">博客描述</label>
+					<label for="description" class="control-label">描述</label>
 					<div class="controls">
-						<textarea rows="8" name="blogdescription" id="blogdescription" class="span6 typeahead">{{ setting['blogdescription']}}</textarea>
+						<textarea rows="8" name="description" id="description" class="span6 typeahead">{{ setting['description']}}</textarea>
 					</div> <!-- /controls -->
 				</div> <!-- /control-group -->
 				
@@ -49,21 +49,21 @@
 				</div> <!-- /control-group -->
 				
 				<div class="control-group">
-					<label for="users_can_register" class="control-label">是否允许新用户注册</label>
+					<label for="can_register" class="control-label">是否允许新用户注册</label>
 					<div class="controls">
-						<select name="users_can_register" id="users_can_register">
-							<option value="1" {% if setting['users_can_register']=='1' %}selected{% end %}>允许</option>
-							<option value="0" {% if setting['users_can_register']=='0' %}selected{% end %}>禁止</option>
+						<select name="can_register" id="can_register">
+							<option value="1" {% if setting['can_register']=='1' %}selected{% end %}>允许</option>
+							<option value="0" {% if setting['can_register']=='0' %}selected{% end %}>禁止</option>
 						</select>
 					</div> <!-- /controls -->
 				</div> <!-- /control-group -->
 				
 				<div class="control-group">
-					<label for="users_can_comment" class="control-label">是否允许评论</label>
+					<label for="can_comment" class="control-label">是否允许评论</label>
 					<div class="controls">
-						<select name="users_can_comment" id="users_can_comment">
-							<option value="1" {% if setting['users_can_comment']=='1' %}selected{% end %}>允许</option>
-							<option value="0" {% if setting['users_can_comment']=='0' %}selected{% end %}>禁止</option>
+						<select name="can_comment" id="can_comment">
+							<option value="1" {% if setting['can_comment']=='1' %}selected{% end %}>允许</option>
+							<option value="0" {% if setting['can_comment']=='0' %}selected{% end %}>禁止</option>
 						</select>
 					</div> <!-- /controls -->
 				</div> <!-- /control-group -->
@@ -86,15 +86,15 @@
 				</div> <!-- /control-group -->
 				
 				<div class="control-group">
-					<label for="posts_per_page" class="control-label">每页显示多少篇文章</label>
+					<label for="page_size" class="control-label">每页显示多少篇文章</label>
 					<div class="controls">
-						<input type="text" value="{{ setting['posts_per_page']}}" id="posts_per_page" name="posts_per_page" class="input-medium">
+						<input type="text" value="{{ setting['page_size']}}" id="page_size" name="page_size" class="input-medium">
 					</div> <!-- /controls -->
 				</div> <!-- /control-group -->
 				<div class="control-group">
-					<label for="posts_per_rss" class="control-label">每页RSS显示多少篇文章</label>
+					<label for="rss_size" class="control-label">每页RSS显示多少篇文章</label>
 					<div class="controls">
-						<input type="text" value="{{ setting['posts_per_rss']}}" id="posts_per_rss" name="posts_per_rss" class="input-medium">
+						<input type="text" value="{{ setting['rss_size']}}" id="rss_size" name="rss_size" class="input-medium">
 					</div> <!-- /controls -->
 				</div> <!-- /control-group -->
 				
@@ -112,11 +112,11 @@
                 </div> <!-- /control-group -->
 				
 				<div class="control-group">
-					<label for="rss_use_excerpt" class="control-label">RSS只使用</label>
+					<label for="rss_excerpt" class="control-label">RSS只使用</label>
 					<div class="controls">
-						<select name="rss_use_excerpt" id="rss_use_excerpt">
-							<option value="1" {% if setting['rss_use_excerpt']=='1' %}selected{% end %}>摘要</option>
-							<option value="0" {% if setting['rss_use_excerpt']=='0' %}selected{% end %}>全文</option>
+						<select name="rss_excerpt" id="rss_excerpt">
+							<option value="1" {% if setting['rss_excerpt']=='1' %}selected{% end %}>摘要</option>
+							<option value="0" {% if setting['rss_excerpt']=='0' %}selected{% end %}>全文</option>
 						</select>
 					</div> <!-- /controls -->
 				</div> <!-- /control-group -->
@@ -126,8 +126,8 @@
                     <br>
                 {% end %}
 				<div class="form-actions">
-					<button class="btn btn-primary" type="submit">Save</button> 
-					<button class="btn">Cancel</button>
+					<button class="btn btn-primary" type="submit">保存</button>
+					<button class="btn">取消</button>
 				</div> <!-- /form-actions -->
 			</fieldset>
 		</form>
@@ -149,12 +149,12 @@
 
     var options_rules = {
         rules: {
-            blogname: {
+            currentname: {
                 minlength: 2,
                 maxlength: 32,
                 required: true
             },
-            blogdescription: {
+            description: {
                 minlength: 2,
                 maxlength: 100,
                 required: true
@@ -167,12 +167,12 @@
                 required: true,
                 number: true
             },
-            posts_per_page: {
+            page_size: {
                 required: true,
                 number: true,
                 range: [1,100]
             },
-            posts_per_rss: {
+            rss_size: {
                 required: true,
                 number: true,
                 range: [1,100]
