--- a/templates/base.html
+++ b/templates/base.html
@@ -5,18 +5,15 @@
     <title>Home Base</title>
     <!--<link id="bs-css" href="/static/libs/css/bootstrap.min.css" rel="stylesheet">-->
     <!--bootstrap link-->
-    <script src="{{static_url('libs/js/bootstrap.min.js')}}">
-    <script type="text/javascript" src="{{static_url('libs/js/jquery.min.js')}}"></script>
+    <script src="{{static_url('libs/js/jquery.min.js')}}"></script>
+    <script src="{{static_url('libs/js/bootstrap.min.js')}}"></script>
+    
     <link rel="stylesheet" href="{{static_url('libs/css/bootstrap.min.css')}}">
 
     <link href="static/libs/css/icomoon/style.css" rel="stylesheet">
-    <!--<script src="static/libs/css/icomoon-font/lte-ie7.js"></script>-->
-    <!--<link href="static/libs/css/wysiwyg/bootstrap-wysihtml5.css" rel="stylesheet">-->
-    <!--<link href="static/libs/css/wysiwyg/wysiwyg-color.css" rel="stylesheet">-->
     <link href="{{static_url('libs/css/main.css')}}" rel="stylesheet">
     <link href="{{static_url('libs/css/mycss.css')}}" rel="stylesheet">
-     <!--Important. For Theming change primary-color variable in main.css  -->
-    <!--<link href="css/charts-graphs.css" rel="stylesheet">-->
+
 </head>
 <body>
 <header>
@@ -25,7 +22,7 @@
     </a>
     <div class="btn-group">
         <button class="btn btn-primary">
-            Srinu Baswa
+            feiying
         </button>
         <button data-toggle="dropdown" class="btn btn-primary dropdown-toggle">
             <span class="caret"></span>
@@ -76,13 +73,14 @@
             <div class="well nav-collapse sidebar-nav" style="border:solid 1px red;margin-top: 100px">
                 <ul class="nav nav-tabs nav-stacked main-menu menu-style">
                     <li class="nav-header hidden-tablet">Main</li>
-                    <li><a class="ajax-link" href="#"><i class="icon-home"></i><span class="hidden-tablet"> Dashboard</span></a></li>
+                    <li><a class="ajax-link" href="/homepage"><i class="icon-home"></i><span class="hidden-tablet"> Home Page</span></a></li>
                     <li><a class="ajax-link" href="#"><i class="icon-edit"></i><span class="hidden-tablet"> Publish</span></a></li>
-                    <li><a class="ajax-link" href="#"><i class="icon-list-alt"></i><span class="hidden-tablet"> Post List</span></a></li>
+                    <!-- 注意 /note/list 与 note/list的区别 -->
+                    <li><a class="ajax-link" href="/note/list"><i class="icon-list-alt"></i><span class="hidden-tablet"> Note List</span></a></li>
                     <li><a class="ajax-link" href="#"><i class="icon-list"></i><span class="hidden-tablet"> Category</span></a></li>
                     <li><a class="ajax-link" href="#"><i class="icon-th-list"></i><span class="hidden-tablet"> Page</span></a></li>
-                    <li class="nav-header hidden-tablet">Setting</li>
-                    <li><a class="ajax-link" href="#"><i class="icon-user"></i><span class="hidden-tablet"> Profile</span></a></li>
+                    <li class="nav-header hidden-tablet">User Manage</li>
+                    <li><a class="ajax-link" href="/user/list"><i class="icon-user"></i><span class="hidden-tablet"> User List</span></a></li>
                     <li><a class="ajax-link" href="/usersetting"><i class="icon-wrench"></i><span class="hidden-tablet"> Setting</span></a></li>
                 </ul>
             </div><!--/.well -->
