--- a/templates/base.html
+++ b/templates/base.html
@@ -77,7 +77,7 @@
                     <li><a class="ajax-link" href="#"><i class="icon-edit"></i><span class="hidden-tablet"> Publish</span></a></li>
                     <!-- 注意 /note/list 与 note/list的区别 -->
                     <li><a class="ajax-link" href="/note/list"><i class="icon-list-alt"></i><span class="hidden-tablet"> Note List</span></a></li>
-                    <li><a class="ajax-link" href="#"><i class="icon-list"></i><span class="hidden-tablet"> Category</span></a></li>
+                    <li><a class="ajax-link" href="/project/list"><i class="icon-list"></i><span class="hidden-tablet"> Project List</span></a></li>
                     <li><a class="ajax-link" href="#"><i class="icon-th-list"></i><span class="hidden-tablet"> Page</span></a></li>
                     <li class="nav-header hidden-tablet">User Manage</li>
                     <li><a class="ajax-link" href="/user/list"><i class="icon-user"></i><span class="hidden-tablet"> User List</span></a></li>
