--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,9 @@
     <link href="{{static_url('libs/css/main.css')}}" rel="stylesheet">
     <link href="{{static_url('libs/css/mycss.css')}}" rel="stylesheet">
 
+    <script src="{{static_url('libs/js/myjs/multiple-select.js')}}"></script>
+    <link rel="stylesheet" href="{{static_url('libs/css/mycss/multiple-select.css')}}">
+
 </head>
 <body>
 <header>
