--- a/templates/project/projectadd.html
+++ b/templates/project/projectadd.html
@@ -47,13 +47,13 @@
         <div class="control-group">
             <label for="describe" class="control-label" style="color: black;">项目描述：</label>
             <div class="controls">
-                    <textarea rows="10" cols="400" id="describe">
+                    <textarea rows="10" cols="400" id="describe" name="describe">
                         我是一个文本框。
                     </textarea>
             </div> <!-- /controls -->
         </div> <!-- /control-group -->
         <div class="control-group">
-            <label for="peer" class="control-label" style="color: black;">参与人员：</label>
+            <label for="ms" class="control-label" style="color: black;">参与人员：</label>
             <div class="controls">
                 <label class="control-label">参与人员</label>
                 <select name="peer" id="ms" multiple="multiple">
