project manage and  optimize

--- a/templates/admin/useradd.html
+++ b/templates/admin/useradd.html
@@ -64,7 +64,7 @@
             <br>
         {% end %}
 
-		<div class="form-actions control-group">
+		<div class="myform-actions control-group">
 			<div >
               <button type="reset" class="btn">重置</button>
               <button type="submit" class="btn btn-primary">添加</button>
