--- a/templates/project/projectlist.html
+++ b/templates/project/projectlist.html
@@ -1,5 +1,11 @@
-
 {% extends "../base.html" %}
+
+<!--/project/list 二级目录有问题-->
+{% block other-css %}
+<link href="/static/ckeditor/contents.css" rel="stylesheet">
+<script src="{{static_url('libs/js/myjs/multiple-select.js')}}"></script>
+<link rel="stylesheet" href="{{static_url('libs/css/mycss/multiple-select.css')}}">
+{% end %}
 
 {% block content-nav %}
 	<ul class="breadcrumb">
@@ -18,12 +24,10 @@
 
 {% block content-header %}
 	<div class="box-header " data-original-title>
-		
 	</div>
 {% end %}
 
 {% block content-body %}
-
 <div class="box-content">
     <a href="/project/add"><i class="icon-pencil"></i>Add an project</a>
     <hr>
@@ -64,6 +68,8 @@
 {% block other-javascript %}
 <!-- <script src="{{static_url('libs/js/jquery.min.js')}}"></script>
 <script src="{{static_url('libs/js/bootstrap.min.js')}}"></script> -->
-<script src="/static/js/jquery.min.js"></script>
-<script src="/static/js/bootstrap.min.js"></script>
+<script src="/static/ckeditor/ckeditor.js"></script>
+<script src="/static/js/jquery.validate.min.js"></script>
+<!--<script src="/static/js/jquery.min.js"></script>-->
+<!--<script src="/static/js/bootstrap.min.js"></script>-->
 {% end %}
